assets/css/styles.css
/* ... */
.tf-social-icon a {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  border: 1px solid;
  border-color: var(--line);
  position: relative;
}

.tf-social-icon a .icon {
  display: inline-flex;
  position: relative;
  z-index: 1;
  font-size: 16px;
}

.tf-social-icon a::after {
  content: "";
  border-radius: 50%;
  position: absolute;
  background: transparent;
  top: -1px;
  left: -1px;
  right: -1px;
  bottom: -1px;
  z-index: 0;
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  -ms-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
  opacity: 0;
  visibility: hidden;
}

.tf-social-icon.style-2 a {
  border-color: var(--line-3);
  color: var(--white);
}

.tf-social-icon .social-facebook::after {
  background: var(--facebook-cl);
}

.tf-social-icon .social-facebook:hover {
  color: var(--white);
}

.tf-social-icon .social-facebook:hover::after {
  opacity: 1;
  visibility: visible;
}

.tf-social-icon .social-instagram::after {
  background: var(--instagram-cl);
}

.tf-social-icon .social-instagram:hover {
  color: var(--white);
}

.tf-social-icon .social-instagram:hover::after {
  opacity: 1;
  visibility: visible;
}

.tf-social-icon .social-x::after {
  background: var(--x-cl);
}

.tf-social-icon .social-x:hover {
  color: var(--white);
}

.tf-social-icon .social-x:hover::after {
  opacity: 1;
  visibility: visible;
}

.tf-social-icon .social-snapchat::after {
  background: var(--snapchat-cl);
}

.tf-social-icon .social-snapchat:hover {
  color: var(--white);
}

.tf-social-icon .social-snapchat:hover::after {
  opacity: 1;
  visibility: visible;
}

.tf-social-icon .social-pinterest::after {
  background: var(--pinterest-cl);
}

.tf-social-icon .social-pinterest:hover {
  color: var(--white);
}

.tf-social-icon .social-pinterest:hover::after {
  opacity: 1;
  visibility: visible;
}

.tf-social-icon .social-linkin::after {
  background: var(--linked_in-cl);
}

.tf-social-icon .social-linkin:hover {
  color: var(--white);
}

.tf-social-icon .social-linkin:hover::after {
  opacity: 1;
  visibility: visible;
}

.tf-social-icon .social-tiktok::after {
  background: var(--tiktok-cl);
}

.tf-social-icon .social-tiktok:hover {
  color: var(--white);
}

.tf-social-icon .social-tiktok:hover::after {
  opacity: 1;
  visibility: visible;
}

.tf-social-icon.style-white a {
  color: var(--white);
  border-color: var(--line);
}

.tf-social-icon-2 {
  display: flex;
  align-items: center;
  gap: 12px;
}

.tf-social-icon-2 a {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border: 1px solid var(--line);
  color: var(--primary);
}

.tf-social-icon-2 a:hover {
  background-color: var(--line);
}

.tf-social-icon-2 .icon {
  font-size: 24px;
}

.tf-link-icon {
  display: flex;
  align-items: center;
  gap: 4px;
}

.tf-social {
  display: flex;
  gap: 12px;
  align-items: center;
}

.social-item {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 52px;
  height: 52px;
  border-radius: 99px;
  font-size: 24px;
  color: var(--white);
  background: linear-gradient(0deg, #272727, #272727), radial-gradient(62.56% 62.56% at 28.14% -10.42%, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
  box-shadow: 0px -3px 0px 0px #080808 inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.3019607843) inset, 0px 2.77px 2.21px 0px rgba(0, 0, 0, 0.1215686275), 0px 6.65px 5.32px 0px rgba(0, 0, 0, 0.1294117647), 0px 12.52px 10.02px 0px rgba(0, 0, 0, 0.1333333333), 0px 22.34px 17.87px 0px rgba(0, 0, 0, 0.1411764706), 0px 41.78px 33.42px 0px rgba(0, 0, 0, 0.1490196078), 0px 100px 80px 0px rgba(0, 0, 0, 0.1490196078), 0px 3px 3px 0px rgba(0, 0, 0, 0.1411764706), 0px 2.77px 2.21px 0px rgba(0, 0, 0, 0.1215686275);
}

.social-item:hover {
  background: radial-gradient(62.56% 62.56% at 28.14% -10.42%, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, #272727, #272727);
  box-shadow: 0px -3px 0px 0px #080808 inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.3019607843) inset, 0px 2.77px 2.21px 0px rgba(0, 0, 0, 0.1215686275), 0px 6.65px 5.32px 0px rgba(0, 0, 0, 0.1294117647), 0px 12.52px 10.02px 0px rgba(0, 0, 0, 0.1333333333), 0px 22.34px 17.87px 0px rgba(0, 0, 0, 0.1411764706), 0px 41.78px 33.42px 0px rgba(0, 0, 0, 0.1490196078), 0px 100px 80px 0px rgba(0, 0, 0, 0.1490196078), 0px 3px 3px 0px rgba(0, 0, 0, 0.1411764706), 0px 2.77px 2.21px 0px rgba(0, 0, 0, 0.1215686275);
}

.tf-social-1 {
  display: flex;
  gap: 10px 24px;
  align-items: center;
  flex-wrap: wrap;
}

.tf-social-1 a {
  display: flex;
  gap: 24px;
  align-items: center;
  justify-content: center;
  padding: 20px 40px;
  border-radius: 24px;
  background-color: var(--neutral-100);
  box-shadow: 0px 7.77px 16px 0px rgba(0, 0, 0, 0.0588235294), 0px 3px 3px 0px rgba(0, 0, 0, 0.1019607843), 0px -8px 0px 0px rgba(0, 0, 0, 0.0509803922) inset, 0px 4px 0px 0px rgba(255, 255, 255, 0.6) inset;
}

.tf-social-1 a .social-item {
  width: 32px;
  height: 32px;
  font-size: 16px;
  background: radial-gradient(62.56% 62.56% at 28.14% -10.42%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, #272727, #272727);
  box-shadow: 0px -3px 0px 0px #080808 inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.3019607843) inset, 0px 2.77px 2.21px 0px rgba(0, 0, 0, 0.1215686275), 0px 3px 3px 0px rgba(0, 0, 0, 0.1411764706);
}

.tf-social-1 a .social-item .icon {
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  -ms-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.tf-social-1 a:hover {
  color: var(--brand);
}

.tf-social-1 a:hover .icon {
  color: var(--brand);
}

@media (max-width: 767px) {
  .tf-social-1 a {
    padding: 12px 28px;
  }
}
/* ... */

